--- a/flowers.html
+++ b/flowers.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Saflor Ocampo Birds</title>
+		<title>Saflor Ocampo Flowers</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
